Committed in future branch

--- a/classes/ListComponentCntrl.cls
+++ b/classes/ListComponentCntrl.cls
@@ -1,7 +1,7 @@
 public class ListComponentCntrl {
 @AuraEnabled  
    public static List<Contact> loadData(){  
-     List<Contact> conList = [select Id,Name from Contact order by Name desc];  
+     List<Contact> conList = [select Id,Name,email from Contact order by Name asc];  
      return conList;  
    }  
 }
